--- a/qualification.html
+++ b/qualification.html
@@ -36,14 +36,40 @@
             </div>
             <div class="content">
                 <div class="details">
-                    <div class="heading">About <hr></div>
-                    <p class="content-about">My name is Rijan Niraula. I am currently studying BSc.CSIT (Bachelors in Science of Computer Science and Information Technology) at Birat Kshitiz College, Biratnagra, Morang under the affiliation of Tribhuvan University.
-                    <br><br>This site is my personal project intended to give my biodata. Here I have provided my personal details, qualications, skills, prior work experiences, etc.</p>
+                    <div class="heading">Qualification<hr></div>
+                    <div class="qua-table">
+                        <table class="q-table">
+                            <tr>
+                                <th>Level</th>
+                                <th>Institution Name</th>
+                                <th>Year of passing</th>
+                                <th>GPA</th>
+                            </tr>
+                            <tr>
+                                <td>School</td>
+                                <td><a href="https:\\www.mehss.edu.np" target="_blank">Modern Era</a></td>
+                                <td>2074</td>
+                                <td>3.90</td>
+                            </tr>
+                            <tr>
+                                <td>Intermediate</td>
+                                <td><a href="https:\\www.shikshadeep.edu.np" target="_blank">Shikshadeep</a></td>
+                                <td>2076</td>
+                                <td>3.29</td>
+                            </tr>
+                            <tr>
+                                <td>Bachelor</td>
+                                <td><a href="https:\\www.kshitiz.edu.np" target="_blank">Birat Kshitiz</a></td>
+                                <td>2084</td>
+                                <td></td>
+                            </tr>
+                        </table>
+                    </div>
                 </div>
                 <div class="tabs">
                     <ul>
-                        <li style="background-color: #790ce6;"><a href="index.html" ><i class="fa-solid fa-user"></i><br>About</a></li>
-                        <li><a href="qualification.html"><i class="fa-solid fa-square-pen"></i><br>Qualification</a></li>
+                        <li><a href="index.html"><i class="fa-solid fa-user"></i><br>About</a></li>
+                        <li style="background-color: #790ce6;"><a href="qualification.html"><i class="fa-solid fa-square-pen"></i><br>Qualification</a></li>
                         <li><a href="skills.html"><i class="fa-solid fa-briefcase"></i><br>Skills</a></li>
                         <li><a href="experience.html"><i class="fa-solid fa-briefcase"></i><br>Experience</a></li>
                         <li><a href="travel.html"><i class="fa-solid fa-compass"></i><br>Travel Log</a></li>
