--- a/skills.html
+++ b/skills.html
@@ -36,15 +36,43 @@
             </div>
             <div class="content">
                 <div class="details">
-                    <div class="heading">About <hr></div>
-                    <p class="content-about">My name is Rijan Niraula. I am currently studying BSc.CSIT (Bachelors in Science of Computer Science and Information Technology) at Birat Kshitiz College, Biratnagra, Morang under the affiliation of Tribhuvan University.
-                    <br><br>This site is my personal project intended to give my biodata. Here I have provided my personal details, qualications, skills, prior work experiences, etc.</p>
+                    <div class="heading">Skills<hr></div>
+                    <ol type="1">
+                        <li>
+                            <h2>Ms.Word/Ms.Excell/Ms.PowerPoint</h2>
+                            <p>Excellent knowlegde on Ms.Office Package</p>
+                        </li>
+                        <li>
+                            <h2>Web Design</h2>
+                            <p>Average Web development skills with knowlede in:
+                            <ul>
+                                <li>HTML</li>
+                                <li>CSS</li>
+                                <li>PHP</li>
+                                <li>MySQL</li>
+                            </ul></p>
+                        </li>
+                        <li>
+                            <h2>Programming</h2>
+                            <p>Good knowlede in both procedural and object-oriented programming language with decent programming skills in:</p>
+                            <ul>
+                                <li>QBASIC</li>
+                                <li>C</li>
+                                <li>C++</li>
+                            </ul>
+                        </li>
+                        <li>
+                            <h2>Photoshop</h2>
+                            <p>Decent skills in graphics designing</p>
+                        </li>
+
+                    </ol>
                 </div>
                 <div class="tabs">
                     <ul>
-                        <li style="background-color: #790ce6;"><a href="index.html" ><i class="fa-solid fa-user"></i><br>About</a></li>
+                        <li><a href="index.html"><i class="fa-solid fa-user"></i><br>About</a></li>
                         <li><a href="qualification.html"><i class="fa-solid fa-square-pen"></i><br>Qualification</a></li>
-                        <li><a href="skills.html"><i class="fa-solid fa-briefcase"></i><br>Skills</a></li>
+                        <li style="background-color: #790ce6;"><a href="skills.html"><i class="fa-solid fa-briefcase"></i><br>Skills</a></li>
                         <li><a href="experience.html"><i class="fa-solid fa-briefcase"></i><br>Experience</a></li>
                         <li><a href="travel.html"><i class="fa-solid fa-compass"></i><br>Travel Log</a></li>
                     </ul>
