--- a/travel.html
+++ b/travel.html
@@ -36,17 +36,29 @@
             </div>
             <div class="content">
                 <div class="details">
-                    <div class="heading">About <hr></div>
-                    <p class="content-about">My name is Rijan Niraula. I am currently studying BSc.CSIT (Bachelors in Science of Computer Science and Information Technology) at Birat Kshitiz College, Biratnagra, Morang under the affiliation of Tribhuvan University.
-                    <br><br>This site is my personal project intended to give my biodata. Here I have provided my personal details, qualications, skills, prior work experiences, etc.</p>
+                    <div class="heading">Travels<hr></div>
+                    <ol>
+                        <li>
+                            <h2>Pokhara</h2>
+                            <p>2074 B.S</p>
+                        </li>
+                        <li>
+                            <h2>Lumbini</h2>
+                            <p>2074 B.S</p>
+                        </li>
+                        <li>
+                            <h2>Gorkha</h2>
+                            <p>2074 B.S</p>
+                        </li>
+                    </ol>
                 </div>
                 <div class="tabs">
                     <ul>
-                        <li style="background-color: #790ce6;"><a href="index.html" ><i class="fa-solid fa-user"></i><br>About</a></li>
+                        <li><a href="index.html"><i class="fa-solid fa-user"></i><br>About</a></li>
                         <li><a href="qualification.html"><i class="fa-solid fa-square-pen"></i><br>Qualification</a></li>
                         <li><a href="skills.html"><i class="fa-solid fa-briefcase"></i><br>Skills</a></li>
                         <li><a href="experience.html"><i class="fa-solid fa-briefcase"></i><br>Experience</a></li>
-                        <li><a href="travel.html"><i class="fa-solid fa-compass"></i><br>Travel Log</a></li>
+                        <li style="background-color: #790ce6;"><a href="travel.html"><i class="fa-solid fa-compass"></i><br>Travel Log</a></li>
                     </ul>
                 </div>
             </div>
