--- a/experience.html
+++ b/experience.html
@@ -36,16 +36,27 @@
             </div>
             <div class="content">
                 <div class="details">
-                    <div class="heading">About <hr></div>
-                    <p class="content-about">My name is Rijan Niraula. I am currently studying BSc.CSIT (Bachelors in Science of Computer Science and Information Technology) at Birat Kshitiz College, Biratnagra, Morang under the affiliation of Tribhuvan University.
-                    <br><br>This site is my personal project intended to give my biodata. Here I have provided my personal details, qualications, skills, prior work experiences, etc.</p>
+                    <div class="heading">Experience<hr></div>
+                    <ol>
+                        <li>
+                            <h2>Freelane Graphic Designer</h2>
+                            <p>Have done graphics designng for:</p>
+                            <ul>
+                                <li>Modern Era English School</li>
+                                <li>Univ College</li>
+                                <li>Birat Kshitiz College</li>
+                            </ul>
+                        </li>
+                        <li></li>
+                        <li></li>
+                    </ol>
                 </div>
                 <div class="tabs">
                     <ul>
-                        <li style="background-color: #790ce6;"><a href="index.html" ><i class="fa-solid fa-user"></i><br>About</a></li>
+                        <li><a href="index.html"><i class="fa-solid fa-user"></i><br>About</a></li>
                         <li><a href="qualification.html"><i class="fa-solid fa-square-pen"></i><br>Qualification</a></li>
-                        <li><a href="skills.html"><i class="fa-solid fa-briefcase"></i><br>Skills</a></li>
-                        <li><a href="experience.html"><i class="fa-solid fa-briefcase"></i><br>Experience</a></li>
+                        <li ><a href="skills.html"><i class="fa-solid fa-briefcase"></i><br>Skills</a></li>
+                        <li style="background-color: #790ce6;"><a href="experience.html"><i class="fa-solid fa-briefcase"></i><br>Experience</a></li>
                         <li><a href="travel.html"><i class="fa-solid fa-compass"></i><br>Travel Log</a></li>
                     </ul>
                 </div>
