--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" href="bio-style.css">
         <link rel="stylesheet" href="about.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    </head>s
+    </head>
     <body>
         <div class="main">
             <div class="sidebar">
