--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>My Bio</title>
+        <title>Rijan Niraula</title>
         <link rel="stylesheet" href="bio-style.css">
         <link rel="stylesheet" href="about.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
